# ffmpeg

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/a/a/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/a/a/ffmpeg/: MainActivity.java
app/src/test/java/a/a/ffmpeg/: ExampleUnitTest.java
ffmpegmain/: CMakeLists.txt  build.gradle
ffmpegmain/src/androidTest/java/com/hft/ffmpeg/main/: ExampleInstrumentedTest.java
ffmpegmain/src/main/: AndroidManifest.xml
ffmpegmain/src/main/cpp/: audio_lame.c  audio_player.cpp  ffmpeg_cmd.c  ffmpeg_jni_define.h  media_player.cpp  video_filter.c
ffmpegmain/src/main/java/com/hft/ffmpeg/main/utils/: AudioPathModel.java  AudioPlayer.java  FFmpegCmd.java  FFmpegKit.java  FFmpegUtil.java  FFmpegUtils.java  FontConfig.java  FrankVisualizer.java  MediaPlayer.java  PathTool.java  Pusher.java  VideoPlayer.java
ffmpegmain/src/test/java/com/hft/ffmpeg/main/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
